--- a/lib/header.html
+++ b/lib/header.html
@@ -1,1 +1,1 @@
-<h1><b>CSC-155 Nolan Decker</b></h1><img src='pixelduck.png' alt='duck pixelated'>
+<h1><b>CSC-155 Nolan Decker</b></h1><img src='http://www.csit.parkland.edu/~ndecker5/CSC_155/unit12site/lib/pixelduck.png' alt='duck pixelated'>
